Removed the worker classpath option
Using the upload directory, any artifact needed like jars, will automatically be put
on the classpath. So extra jars needed, we can just copy in the upload directory. No
need to have a special flag for it.